objects/ClauseLibrary__c.object
<CustomObject>
    <description>&lt;CLA&gt; - Represents a list of clauses for scentre group eg. Standard Clauses, Non-Standard Clauses</description>
    <fields>
        <fullName>ActivatedDate__c</fullName>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicableCountry__c</fullName>
        <description>It&apos;s used to specify the clauses based on country</description>
        <label>Applicable Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplicableState__c</fullName>
        <label>Applicable State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClauseDetails__c</fullName>
        <label>Clause Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocumentLocation__c</fullName>
        <label>Document Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upfront Price Components</fullName>
                    <default>true</default>
                    <label>Upfront Price Components</label>
                </value>
                <value>
                    <fullName>LESSOR’S DISCLOSURE STATEMENT</fullName>
                </value>
                <value>
                    <fullName>KEY DISCLOSURE ITEMS</fullName>
                </value>
                <value>
                    <fullName>PART 1. PREMISES</fullName>
                </value>
                <value>
                    <fullName>PART 2. TERM OF LEASE AND OPTION/S TO RENEW LEASE</fullName>
                </value>
                <value>
                    <fullName>PART 3. WORKS FIT OUT AND REFURBISHMENT</fullName>
                </value>
                <value>
                    <fullName>PART 4. RENT</fullName>
                </value>
                <value>
                    <fullName>PART 5. OUTGOINGS</fullName>
                </value>
                <value>
                    <fullName>PART 6. OTHER COSTS</fullName>
                </value>
                <value>
                    <fullName>PART 7. ALTERATION WORKS (INCLUDING RENOVATIONS, EXTENSIONS, REDEVELOPMENT, DEMOLITION)</fullName>
                </value>
                <value>
                    <fullName>PART 8. TRADING HOURS</fullName>
                </value>
                <value>
                    <fullName>PART 9. RETAIL SHOPPING CENTRE DETAILS</fullName>
                </value>
                <value>
                    <fullName>PART 10. OTHER DISCLOSURES</fullName>
                </value>
                <value>
                    <fullName>ADDITIONAL RESPONSES FOR RECURRING LESSEE COMMENTS</fullName>
                </value>
                <value>
                    <fullName>PART 11. LANDLORD ACKNOWLEDGEMENT AND SIGNING</fullName>
                </value>
                <value>
                    <fullName>ADVICE TO LESSOR</fullName>
                </value>
                <value>
                    <fullName>PART 4.  RENT</fullName>
                    <isActive>false</isActive>
                    <label>PART 4.  RENT</label>
                </value>
                <value>
                    <fullName>Permitted Use</fullName>
                    <isActive>false</isActive>
                    <label>Permitted Use</label>
                </value>
                <value>
                    <fullName>Premises details</fullName>
                    <isActive>false</isActive>
                    <label>Premises details</label>
                </value>
                <value>
                    <fullName>Term of Lease</fullName>
                    <isActive>false</isActive>
                    <label>Term of Lease</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HighRiskClause__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag drives reporting on Opportunity</description>
        <inlineHelpText>This is applicable for Exclusions, Exclusivity and First Right of Refusal only.</inlineHelpText>
        <label>High Risk Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCAInformation__c</fullName>
        <inlineHelpText>Information for the RCA for approvals</inlineHelpText>
        <label>RCA Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ReasonRecommendation__c</fullName>
        <label>Reason Recommendation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RiskApplies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risk Applies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskClauseApprovers__c</fullName>
        <label>Risk Clause Approvers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RoleType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RiskClauseNotifyUsers__c</fullName>
        <label>Risk Clause Notify Users</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RoleType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RiskLevel__c</fullName>
        <label>Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RiskLevels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SectionTitle__c</fullName>
        <label>Section Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A) Annual Minimum Rent</fullName>
                </value>
                <value>
                    <fullName>B) Annual increase of Minimum Rent and Promotion Levy</fullName>
                </value>
                <value>
                    <fullName>C) Outgoings</fullName>
                </value>
                <value>
                    <fullName>D) Promotion Levy</fullName>
                </value>
                <value>
                    <fullName>E) Percentage Rent</fullName>
                </value>
                <value>
                    <fullName>F) Services</fullName>
                </value>
                <value>
                    <fullName>G) Lessee contribution</fullName>
                </value>
                <value>
                    <fullName>H) Hoarding costs associated with the fitout of the Premises</fullName>
                </value>
                <value>
                    <fullName>Lessee</fullName>
                </value>
                <value>
                    <fullName>Premises</fullName>
                </value>
                <value>
                    <fullName>1.1	Street address of premises</fullName>
                </value>
                <value>
                    <fullName>1.2	Plan of premises</fullName>
                </value>
                <value>
                    <fullName>1.3	Lettable area of premises</fullName>
                </value>
                <value>
                    <fullName>1.4 Existing structures, fixtures, plant and equipment in the premises, provided by the lessor (excluding any works, fit out and refurbishment described in Part 3)</fullName>
                </value>
                <value>
                    <fullName>2.1	Description of permitted use</fullName>
                </value>
                <value>
                    <fullName>2.2	Is the permitted use described in item 2.1 exclusive to the lessee?</fullName>
                </value>
                <value>
                    <fullName>5.3	Date lease expires</fullName>
                </value>
                <value>
                    <fullName>3 Number of car parking spaces</fullName>
                </value>
                <value>
                    <fullName>4 Head Lease</fullName>
                </value>
                <value>
                    <fullName>5.3	Length of term</fullName>
                </value>
                <value>
                    <fullName>9.1	Fit out works to be carried out by the lessee</fullName>
                </value>
                <value>
                    <fullName>9.2	Is the lessor providing any contribution towards the cost of the lessee&apos;s fit out?</fullName>
                </value>
                <value>
                    <fullName>14.1 Outgoings estimate (annual) for the 12 month period 1 January XXXX to 31 December XXXX</fullName>
                </value>
                <value>
                    <fullName>14.2 Outgoings estimate (annual) for the 12 month period 1 January XXXX to 31 December XXXX</fullName>
                </value>
                <value>
                    <fullName>14.3 Outgoings estimate (annual) for the 12 month period 1 January XXXX to 31 December XXXX</fullName>
                </value>
                <value>
                    <fullName>14.4 Outgoings estimate (annual) for the 12 month period 1 January XXXX to 31 December XXXX</fullName>
                </value>
                <value>
                    <fullName>18.1 Clause(s) in lease providing for relocation of lessee</fullName>
                </value>
                <value>
                    <fullName>18.2 Clause(s) in lease providing for demolition of the premises or building/centre</fullName>
                </value>
                <value>
                    <fullName>19 Core trading hours relevant to the lessee</fullName>
                </value>
                <value>
                    <fullName>20 Lessee access to premises outside core trading hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ClauseStatuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <description>This is sub type if clauses. It&apos;s dependent on the type of the clause</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ClauseSubType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_SortingOrder__c</fullName>
        <label>TECH_SortingOrder</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech_DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREFId__c</fullName>
        <externalId>true</externalId>
        <label>Tech_DMXREF_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ClauseType</valueSetName>
        </valueSet>
    </fields>
    <label>Clause Library</label>
    <listViews>
        <fullName>Active_Clauses</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>HighRiskClause__c</columns>
        <columns>RiskApplies__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Clauses</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>RiskLevel__c</columns>
        <columns>RiskApplies__c</columns>
        <columns>RiskClauseApprovers__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>HighRiskClause__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ClauseswithRiskApplied</fullName>
        <columns>NAME</columns>
        <columns>RiskLevel__c</columns>
        <columns>Type__c</columns>
        <columns>RiskApplies__c</columns>
        <columns>HighRiskClause__c</columns>
        <columns>RiskClauseApprovers__c</columns>
        <columns>RiskClauseNotifyUsers__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RiskApplies__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Clauses with Risk Applied</label>
    </listViews>
    <listViews>
        <fullName>SpecialConditions</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>HighRiskClause__c</columns>
        <columns>RiskApplies__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Special Condition</value>
        </filters>
        <label>Special Conditions</label>
    </listViews>
    <listViews>
        <fullName>StandardResponseClauses</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>ApplicableState__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Acceptance,Counter Offer</value>
        </filters>
        <label>Standard Response Clauses</label>
    </listViews>
    <nameField>
        <label>Clause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clause Libraries</pluralLabel>
    <recordTypes>
        <fullName>CLA_RetailClauses</fullName>
        <active>true</active>
        <description>All retail related clauses</description>
        <label>CLA - Retail Clauses</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLA_StandardResponses</fullName>
        <active>true</active>
        <description>All clauses for acceptance and counter offer letter</description>
        <label>CLA - Standard Responses</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CLA_CannotChangeStatus</fullName>
        <active>true</active>
        <description>Only Retail Admin Regional Managers and Executives should be able change Status.</description>
        <errorConditionFormula>ISCHANGED( Status__c ) &amp;&amp;
(AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
     $Profile.Name &lt;&gt; &quot;SCG-SysAdm&quot;,
     $Profile.Name &lt;&gt; &quot;SCG-Sys DataMigration&quot;,
     $Profile.Name &lt;&gt; &quot;SCG-Sys Integration&quot;,
     OR($Profile.Name &lt;&gt; &quot;SCG-Retail Admin&quot; , $UserRole.Name &lt;&gt; &quot;Executive&quot;))) &amp;&amp;
(OR(ISPICKVAL(Type__c, &apos;RCA&apos;),(ISPICKVAL(Type__c, &apos;Special Condition&apos;) &amp;&amp; RiskApplies__c = True)))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Only Retail Admin Regional Managers and Executives can change the Status of RCA Clause Library records</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CLA_ValidateRiskApprovers</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RiskApplies__c,ISBLANK(RiskClauseApprovers__c))</errorConditionFormula>
        <errorDisplayField>RiskClauseApprovers__c</errorDisplayField>
        <errorMessage>Clauses with Risk must have Approvers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CLA_ValidateSubTypeofRCA</fullName>
        <active>true</active>
        <description>If the &quot;Risk Applies&quot; or &quot;High Risk&quot; flags are checked, the sub type should be selected</description>
        <errorConditionFormula>AND (OR(RiskApplies__c=True,HighRiskClause__c=True),ISPICKVAL(SubType__c,&apos;&apos;))</errorConditionFormula>
        <errorMessage>Please enter the Sub Type for High Risk or Risk Applies clauses</errorMessage>
    </validationRules>
</CustomObject>